# quilting-blocks

./: README.md  pyproject.toml  rainbow_quarter_log_cabin_quilt.py  testing_recursion.py  yardage_playground.py
quilting_blocks/: common_fabric_sizes.py  log_cabin.py
quilting_blocks/tests/: test_log_cabin.py  tests.py
